Bug 93077 - Dialog editor: adding a language crashes LibO
Summary: Dialog editor: adding a language crashes LibO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.2.6.3 release
Hardware: x86 (IA32) Linux (All)
: high critical
Assignee: Marek Dolezel
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2015-08-02 10:55 UTC by Julien Nabet
Modified: 2016-10-25 19:23 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (15.84 KB, text/plain)
2015-08-02 10:55 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2015-08-02 10:55:01 UTC
Created attachment 117603 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I gave a try to tdf#92896.
But I had a crash before deleting since I had it during adding.

So here are the steps:
1. Tools / Macros / Organize Dialogs
2. New Dialog
3. Edit dialog
4. Press 'Manage Language' toolbar (may need to enable Language toolbar in Views)
5. Add a language
=> LibO crashes
Comment 1 Julien Nabet 2015-08-02 10:58:16 UTC
Michael/Noel: thought you might be interested in this one.

BTW, I can reproduce the crash with LO Debian package 4.4.4.3 (I don't know if it's due to the same cause)
Comment 2 Jacques Guilleron 2015-08-02 13:58:37 UTC
Hi Julien,

I don't reproduce with LO 4.4.4.3 when adding a language under Windows 7 Home Premium.
Comment 3 raal 2015-08-03 18:02:58 UTC
No crash with Version: 5.1.0.0.alpha1+
Build ID: 2d9db406d301d722649ca539cacad823b89191ca
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-07-31_00:59:07
Comment 4 Julien Nabet 2015-08-07 18:44:34 UTC
I forgot an important step!
After step1, select "Untitled 1", the brand new file, then go on from step 2

Indeed, if I create a new dialog directly in "My Dialogs", I don't reproduce the crash.
Comment 5 raal 2015-08-08 07:39:07 UTC
I can confirm crash with Version: 5.1.0.0.alpha1+
Build ID: 25534a62b2ba398c6298c6b9e521f20de1087540
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-08-07_14:13:33

I can reproduce crash/freeze with LO 4.4.2.2
Comment 6 Michael Meeks 2015-08-22 16:24:30 UTC
Unrelated to VclPtr and an ancient bug (tested in 4.2) =) I've worked around the crash, the underlying problem needs fixing. I'll close this guy and add an easy-hack to get the full fix.

Patch in gerrit is here: https://gerrit.libreoffice.org/17929

Thanks !
Comment 7 Commit Notification 2015-08-22 19:11:52 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f2f97ec5bf4f2808544bef5eb583ed4d424acfa9

tdf#93077 - basic dialog localization issues.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-08-22 19:12:04 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a198e618f6e7a94536c259247151150a6e3ea361&h=libreoffice-5-0

tdf#93077 - basic dialog localization issues.

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.