tdf#93077 - basic dialog localization issues.

Don't remove non-existent languages to clean the dialog.
Avoid crashing when adding languages to a non-localized dialog.

Change-Id: Ie356177e00e56c214727d513ae0ce6d62d32591c
Reviewed-on: https://gerrit.libreoffice.org/17929
Tested-by: Jenkins <ci@libreoffice.org>
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>